<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">职考网校</string>
    <string name="title_homepage">HomePage</string>
    <string name="title_course">Course</string>
    <string name="title_openclass">OpenClass</string>
    <string name="title_coursepacket">CoursePacket</string>
    <string name="title_classschedulecard">ClassScheduleCard</string>
    <string name="title_myinfo">MyInfo</string>
    <string name="title_news">News</string>
    <string name="title_questionbank">QuestionBank</string>
    <string name="title_questionanswers">QuestionAnswers</string>
    <string name="title_recommendcourse">RecommendCourse</string>
    <string name="title_recommendcoursepacket">RecommendCoursePacket</string>
    <string name="title_more">More ></string>
    <string name="title_loginnamehint">Please Input Your PhoneNumber Or UserName</string>
    <string name="title_loginphonehint">Please Input Your PhoneNumber</string>
    <string name="title_loginpasswordhint">Please Input Your Password</string>
    <string name="title_loginnewpasswordhint">Please Input Your New Password</string>
    <string name="title_loginsmscodehint">Please Input SMS Code</string>
    <string name="title_login">login</string>
    <string name="title_register">register</string>
    <string name="title_forgotpassword">forgotpassword</string>
    <string name="title_loginwithshortmessageverificationcode">Log in with Short Message Verification Code</string>
    <string name="title_loginwithpassword">Log in with Password</string>
    <string name="title_getsmscode">Get SMS Code</string>
    <string name="title_resetpassword">Reset Password</string>
    <string name="title_passwordtipshint">The login password is 6 to 12 digits or letters</string>
    <string name="title_confirmpasswordhint">Confirm password</string>
    <string name="title_mycourse">My Course</string>
    <string name="title_mycoursepacket">My CoursePacket</string>
    <string name="title_mycollect">My Collect</string>
    <string name="title_myquestionbank">My QuestionBank</string>
    <string name="title_myorder">My Order</string>
    <string name="title_mymessage">My Message</string>
    <string name="title_myanswer">My Answer</string>
    <string name="title_mycache">My Cache</string>
    <string name="title_mycoupon">My Coupon</string>
    <string name="title_mybalance">My Balance</string>
    <string name="title_loginimmediately">Login Immediately</string>
    <string name="title_loginclick">Click Login</string>
    <string name="title_personalstatement">Personal Statement</string>
    <string name="title_setting">Setting</string>
    <string name="title_essentialinformation">Essential information</string>
    <string name="title_clearcache">Clear cache</string>
    <string name="title_allownonwifiplay">Allow non-WiFi networks to play/cache videos</string>
    <string name="title_version">Version</string>
    <string name="title_aboutus">About us</string>
    <string name="title_privacypolicy">Privacy policy</string>
    <string name="title_logout">Logout</string>
    <string name="title_icon">Icon</string>
    <string name="title_id">Id</string>
    <string name="title_name">Name</string>
    <string name="title_email">Email</string>
    <string name="title_tel">Tel</string>
    <string name="title_idnumber">IDnumber</string>
    <string name="title_updatapassword">Updata password</string>
    <string name="title_takephoto">Take photo</string>
    <string name="title_choosepicture">Choose local picture</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_usernameupdate">Update username</string>
    <string name="title_inputyourusername">Please input your username</string>
    <string name="title_inputyouremail">Please input your email</string>
    <string name="title_inputyouridnumber">Please input your idnumber</string>
    <string name="title_inputyouroldpassword">Please input your old password</string>
    <string name="title_inputyournewpassword">Please set your new password</string>
    <string name="title_inputyournewpasswordagain">Please input your new password again</string>
    <string name="title_finish">Finish</string>
    <string name="title_settingname">Setting name</string>
    <string name="title_functionintroduce">Function introduce</string>
    <string name="title_checkversion">Check version</string>
    <string name="aboutus_agreeTerms"><a href="http://www.baidu.com/">《Jian Wei Edu Software Licensing and Service Agreemen》</a></string>
    <string name="aboutus_and">and</string>
    <string name="aboutus_privacyprotectionguideline"><a href="http://www.baidu.com/">《Privacy Protection Guideline》</a></string>
    <string name="title_details">details</string>
    <string name="title_coursestage">stage course</string>
    <string name="title_teachers">teachers</string>
    <string name="title_briefintroduction">brief introduction：</string>
    <string name="title_catalog">catalog</string>
    <string name="title_Coursematerials">Coursematerials</string>
    <string name="nav_confirm_finish">完成</string>
    <string name="over_max_count_tips">你最多可以选择%1$d张图片</string>
    <string name="done_with_count">完成(%1$d/%2$d)</string>
    <string name="version_tip">©Talkfun Live V</string>
    <string name="action_settings">Settings</string>
    <string name="live_log_label">登  录</string>
    <string name="playback_log_label">进  入</string>
    <string name="playback_download">下载页</string>
    <string name="tips">提示</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="exit">是否确认退出？</string>
    <string name="goon_download">正在使用2G/3G/4G移动网络,继续下载？</string>
    <string name="key">房间密码</string>
    <string name="playId">房间ID</string>
    <string name="nickname">用户名</string>
    <string name="notice_default">公告 ： </string>
    <string name="question">提问</string>
    <string name="chat">聊天</string>
    <string name="notice">公告</string>
    <string name="album">专辑</string>
    <string name="session">章节</string>
    <string name="private_chat">私聊</string>
    <string name="input_edt_hint">请输入文字</string>
    <string name="assistants">助教</string>
    <string name="teacher">老师</string>
    <string name="blank">&#160;</string>
    <string name="member_forceout">您的帐号在其他地方登陆,您已下线.</string>
    <string name="member_kick">你已经被管理员请出该房间了</string>
    <string name="live_in">直播</string>
    <string name="play_back">点播</string>
    <string name="live_mode_h5">直播H5模式</string>
    <string name="live_mode_native">房间模式</string>
    <string name="playback_mode_h5">点播H5模式</string>
    <string name="playback_mode_native">课程模式</string>
    <string name="change_to_live">切换到直播</string>
    <string name="change_to_playback">切换到点播</string>
    <string name="remember_id">记住此ID</string>
    <string name="teacher_reply_tip">老师回答了你的问题，点击查看</string>
    <string name="login_failed_check_the_key">登录失败，请检查ID或密码是否输入正确。</string>
    <string name="loading_please_wait">正在登录，请稍候&#8230;</string>
    <string name="offline_login_failed">网络错误，登录失败。</string>
    <string name="password_cannot_empty">密码不能为空。</string>
    <string name="roomId_cannot_empty">ID不能为空。</string>
    <string name="account_cannot_empty">用户名不能为空。</string>
    <string name="illegal_input">包含非法字符,请重新输入.</string>
    <string name="press_again_exit">再按一次后退键退出程序</string>
    <string name="weak_network_login_failed">网络错误，登录失败。</string>
    <string name="login_failed_check_play_id">登录失败，请检查点播ID是否输入正确。</string>
    <string name="not_connect">网络连接失败，请检查您的网络设置</string>
    <string name="wifi_connect">wifi已连接</string>
    <string name="not_buffer">本地还没有缓存该视频，请联网下载！</string>
    <string name="refresh">刷新</string>
    <string name="goback">返回</string>
    <string name="update_tip">软件版本有更新，是否下载？</string>
    <string name="new_apk_name">UpdateDemoRelease.apk</string>
    <string name="init_new_ver_name">1.0</string>
    <string name="update_dialog_title">软件版本更新</string>
    <string name="download">下载</string>
    <string name="download_tip">下载列表</string>
    <string name="editor">编辑</string>
    <string name="delete">删除</string>
    <string name="select_all">全选</string>
    <string name="cancel_select_all">取消全选</string>
    <string name="ask_again">以后再说</string>
    <string name="zero_percent">0%</string>
    <string name="one_hundred_percent">100%</string>
    <string name="live_wait_title">直播未开始</string>
    <string name="live_stop_title">直播已结束</string>
    <string name="init_zhubo">老师</string>
    <string name="NET_MODERATE">网络一般</string>
    <string name="NET_POOR">网络较差</string>
    <string name="ToDownload_tip">正在下载</string>
    <string name="Downloading_tip">已在下载队列</string>
    <string name="Not_enough_memory">内存不足</string>
    <string name="connect_error">网络错误,请稍后重试</string>
    <string name="switch_net_success">网络切换成功</string>
    <string name="switch_net_fail">网络切换失败</string>
    <string name="public_broadcast">公共广播:</string>
    <string name="ht_notify" formatted="false" tools:ignore="StringFormatInvalid">通知:%s发起了抽奖,恭喜%s中奖!</string>
    <string name="ht_vote_result_notify" formatted="false" tools:ignore="StringFormatInvalid">%s在%s结束了一个投票</string>
    <string name="ht_vote_new_notify" formatted="false" tools:ignore="StringFormatInvalid">%s在%s开始了一个投票</string>
    <string name="ht_sign_start" formatted="false" tools:ignore="StringFormatInvalid">%s在%s开始点名</string>
    <string name="ht_sign_stop" formatted="false" tools:ignore="StringFormatInvalid">点名结束，签到人数%s人/点名人数%s人</string>
    <string name="ht_page" formatted="false" tools:ignore="StringFormatInvalid">第%s页</string>
    <string name="ht_sign_in">通知: 你已确认签到</string>
    <string name="ht_check_vote_result">查看结果</string>
    <string name="apply_for_has_underline"><a href="">申请试用</a></string>
    <string name="apply_for">申请试用</string>
    <string name="got_it">好的,知道了</string>
    <string name="shutUp_all_open">锁屏模式已开启</string>
    <string name="shutUp_all_close">锁屏模式已关闭</string>
    <string name="shutUp_input_tip">目前是锁屏模式,暂时不能发言哦...</string>
    <string name="input_your_text">请输入文字</string>
    <string name="play_title">自考概率论第二章节</string>
    <string name="line_one">线路一</string>
    <string name="line_two">线路二</string>
    <string name="scan_login_tip">扫码登录</string>
    <string name="live_ID">直播ID</string>
    <string name="playback_ID">点播ID</string>
    <string name="live_password">密码</string>
    <string name="playback_password">点播密码</string>
    <string name="scan">扫一扫</string>
    <string name="nickname_new">昵称</string>
    <string name="loading">即将进入...</string>
    <string name="password_error_tip">密码错误,请重新输入</string>
    <string name="login_old_version">旧版登录</string>
    <string name="setting">设置</string>
    <string name="video_save_list">视频缓存列表</string>
    <string name="help">帮助与反馈</string>
    <string name="about_us">关于欢拓云播</string>
    <string name="scan_tip">将二维码放入框内,即可自动扫描</string>
    <string name="about_us_one">欢拓一直致力于提供行业领先的互动直播SaaS云服务，在教育领域我们努力还原在线教学场景，实现真实的在线互动教学 。</string>
    <string name="about_us_two">欢拓从2010年就开始专注于音/视频采样、编码、后处理以及适应国内复杂网络环境的智能高速网络传输协议的研究，并在2014年正式推出针对企业的云直播SaaS服务。</string>
    <string name="about_us_three">欢拓一直以技术为核心，用户需求为导向，搭建专业技术直播平台，不断革新行业技术水平，引领真实互动通讯的发展。</string>
    <string name="token">QzM4YTOxYmZjF2M4U2N3ImM0Y2YihTO2QTZ0EzM4YTN8xHf911W6Iic0RXYiwSO4IDO0gDO0QTM6ISZtlGdnVmciwiIzATO5gjMiojIklGeiwCMyojIklGciwiIiojIyFGdhZXYiwCM6IiclRmbldmIskDO0ETO4gDN0EjOiUmcpBHelJCL4kDMwEjOiQWat92byJCLi4WatJiOiUWbh52ajlmbiwiIyV2c1JiOiUGbvJnIsIiN0gjN0AjMiojIklWdiwCMyojIkl2XyVmb0JXYwJye</string>
    <string name="runs_vote">发起了投票</string>
    <string name="ht_vote">投票</string>
    <string name="multiple_choice">(多选)</string>
    <string name="single_choice">(单选)</string>
    <string name="ht_achieve_limit">选项达到上限</string>
    <string name="ht_vote_success_tip">秒后自动关闭页面</string>
    <string name="ht_vote_success">投票成功</string>
    <string name="ht_change_network">选择网络</string>
</resources>