<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="#ffffff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btn_open_camera"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:singleLine="true"
        android:textSize="18sp"
        android:text="@string/title_takephoto"
        android:clickable="true"
        android:onClick="onClickOpenCamera"
        android:visibility="gone"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ececec"/>
    <TextView
        android:id="@+id/btn_choose_img"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:singleLine="true"
        android:textSize="18sp"
        android:text="@string/title_choosepicture"
        android:clickable="true"
        android:onClick="onClickChooseImg"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#ececec"/>
    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:singleLine="true"
        android:textSize="18sp"
        android:text="@string/title_cancel"
        android:clickable="true"
        android:onClick="onClickButtonDialogCancel"/>
</LinearLayout>