<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/Smart_homepage_layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.scwang.smartrefresh.header.BezierCircleHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ScrollView
                android:id="@+id/fragment_block_menu_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.android.jwjy.zkktproduct.ModelImageSlideshow
                        android:id="@+id/is_gallery"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_10"/>
                    <GridLayout
                        android:id="@+id/functionButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:columnCount="4"
                        android:rowCount="3"></GridLayout>

                    <RelativeLayout
                        android:id="@+id/morecourse"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:gravity="left"
                            android:text="@string/title_recommendcourse"
                            android:textColor="#000000"
                            android:textSize="@dimen/textsize18"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:clickable="true"
                            android:gravity="right"
                            android:onClick="onClickMoreCourse"
                            android:text="@string/title_more"
                            android:textColor="@color/gray" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/coursemodel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                    <View
                        android:id="@+id/courseline"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp1"
                        android:layout_marginTop="@dimen/dp_3"
                        android:background="#ececec" />

                    <RelativeLayout
                        android:id="@+id/morecoursepacket"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:gravity="left"
                            android:text="@string/title_recommendcoursepacket"
                            android:textColor="#000000"
                            android:textSize="@dimen/textsize18"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:clickable="true"
                            android:gravity="right"
                            android:onClick="onClickMoreCoursePacket"
                            android:text="@string/title_more"
                            android:textColor="@color/gray" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/coursepacketmodel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                    <View
                        android:id="@+id/line"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_0"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
        <com.scwang.smartrefresh.layout.footer.FalsifyFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</RelativeLayout>
